@@ -36,8 +36,8 @@ namespace pqxx
 
 
 /// Processes several queries in FIFO manner, optimized for high throughput
-/** @warning This is an early prototype, not functional code, and it will most
- * likely change radically before becoming part of the library.
+/** @warning This is a prototype, and it may still change radically before 
+ * becoming a stable part of the library.
  *
  * Use a pipeline if you want to execute several queries in succession, in
  * situations where some of the queries do not depend on the outcome of the
@@ -52,6 +52,10 @@ namespace pqxx
  * of results retrieval as possible; issue each query as early as possible and
  * retrieve their results as late as possible, so the pipeline has as many
  * ongoing queries as possible at any given time.  In other words, keep it busy!
+ *
+ * One warning: if any of the queries you insert leads to a syntactic error, the
+ * error may be returned as if it were generated by an older query.  Future
+ * versions may try to work around this if working in a nontransaction.
  */
 class PQXX_LIBEXPORT pipeline
 {
